--- a/skeleton/resource/tmpl/go_cmd/main.go.tmpl
+++ b/skeleton/resource/tmpl/go_cmd/main.go.tmpl
@@ -85,7 +85,7 @@ func main() {
 	os.Exit(2)
 }
 
-var usageTemplate = `{{ .Name }} is a tool for...
+var usageTemplate = `{{ .Name }} is a tool for {{ .Description }}
 
 Usage:
 
